# binance_tests_python

./: .gitignore  README.md  env.example  helper.py  project_cfg.py  pyproject.toml
binance_apps/model/api/routes/: broker.py  european_options.py  perpetual_futures.py
binance_apps/model/data/: error_codes.py  exchangeinfo.py  perpetual_futures_market.py  perpetual_futures_trade.py  post_order.json
binance_apps/pages/: general_page_testnet.py
binance_apps/postman_collections/: collection_folder_schema.json  routes_loader_from_collection.py
binance_tests/model/api/routes/: delivery_futures.py  spot.py
binance_tests/model/data/: account_information.json  kline.json  model.py  perpetual_futures_market.py  perpetual_futures_trade.py  recent_trades_list.json
binance_tests/pages/: general_page_testnet.py
binance_tests/postman_collections/: collection_subfolder_schema.json  routes_loader_from_collection.py
binance_tests/utils/extensions/: pydantic.py
binance_tests/utils/requests_extensions/: __init__.py  session_with_allure.py
tests/api/futures_testnet/: account_test.py  market_test.py  order_test.py  trade_test.py
tests/api/perpetual_futures/: conftest.py  market_test.py
tests/api/spot/: trade_test.py
tests/api/spot_testnet/: trade_test.py
tests/ui/: test_general_page_testnet.py
